package ontomagic;

/**
 * Only Creators can create Fields, and by extension realities.
 * Soul is a Creator.
 */
public interface Creator {

    Field createField();
}
