package ontomagic;

/** Rung on the ladder, between Soul and Self. STATUS: deferred. */
public class HigherSelf extends Soul {
}
