package ontomagic;

/**
 * Mental: mind, consciousness, awareness, thinking, cognition.
 *
 * Self inherits this from a superclass. Which rung of the ladder it belongs to
 * is open, so it is not wired into the ladder yet.
 *
 * STATUS: open. Under discussion in the playground.
 */
public interface Mental {
}
