package ontomagic;

/**
 * Be-Ness. Top of the ladder.
 *
 * Be-Ness = (Abstract Space x Abstract Motion) ^ Absolute
 *
 * The Absolute has three aspects: Abstract Space, Abstract Motion and Duration.
 * The formula above names two of them.
 *
 * STATUS: open. Where Duration sits in the formula is open, and Dlozi has not
 * yet settled how any of it is expressed in code. Nothing is modelled until
 * she does.
 */
public abstract class TheAll {
}
