package ontomagic;

/** Rung on the ladder. STATUS: deferred. */
public abstract class Atmic extends Monad {
}
