package ontomagic;

/**
 * The substrate. Everything is vibration.
 *
 * A thought, a body and emotions are frequencies, or sets of them, at the
 * noumenal level. Even the smallest things have a few, the way an embedding is
 * a vector rather than a single number.
 */
public class Frequency {

    private final String name;

    public Frequency(String name) {
        this.name = name;
    }

    public String name() {
        return name;
    }
}
