@startuml all
title Onto-Magic: the core ontology (v2.0, 25 September 2026)

skinparam classAttributeIconSize 0
skinparam shadowing false
hide empty members

abstract class TheAll <<open>> {
  .. Be-Ness ..
  (Abstract Space x Abstract Motion) ^ Absolute
  .. three aspects of the Absolute ..
  Abstract Space
  Abstract Motion
  Duration
}
note right of TheAll
  The formula names two of the
  three aspects. Where Duration
  sits in it is open, as is how
  any of it is expressed here.
end note

abstract class Monad <<deferred>>
abstract class Atmic <<deferred>>
abstract class Buddhic <<deferred>>

interface Creator {
  + createField() : Field
}
note right of Creator
  Only Creators can create Fields,
  and by extension realities.
end note

class Soul {
  + createField() : Field
}

class HigherSelf <<deferred>>

class Self {
  - innerBeing : Field
  - allowance : Allowance
  + reality : Reflection
  + believe(b : Belief)
}

class Field {
  - maker : Creator
}
note bottom of Field
  The surface a Reflection lands on.
end note

class Allowance {
  - beliefs : List<Belief>
  + hold(b : Belief)
  + beliefs() : List<Belief>
  + totalAmplitude() : int
}
note bottom of Allowance
  A group of beliefs.
  Append-only: beliefs are
  forever. Nothing is removed.
end note

class Belief {
  - frequencies : List<Frequency>
  - amplitude : int
  + reinforce(t : Thought)
  + quieten()
  + amplitude(n : int)
}
note bottom of Belief
  Manages frequencies and their
  amplitude. Amplitude is how much
  it governs now. Zero is a node
  on the gradient, not an absence.
end note

class Frequency
note bottom of Frequency
  The substrate. Everything
  is vibration.
end note

class Thought {
  - frequencies : List<Frequency>
}

class Reflection {
  - field : Field
  - allowance : Allowance
  + shareOf(b : Belief) : double
}
note bottom of Reflection
  Automatic and live. All beliefs
  present at once, weighted by
  amplitude, composited like layers,
  nothing filtered. Inner being is
  reflected in reality, and reality
  is what we experience.
end note

interface Mental <<open>> {
  .. mind, consciousness ..
  .. awareness, thinking, cognition ..
}
note right of Mental
  Inherited by Self from a superclass.
  Which rung is open.
end note

TheAll <|-- Monad
Monad <|-- Atmic
Atmic <|-- Buddhic
Buddhic <|-- Soul
Creator <|.. Soul
Soul <|-- HigherSelf
HigherSelf <|-- Self

Soul ..> Field : creates
Self *-- Field : inner being
Self *-- Allowance : holds
Self *-- Reflection : reality
Reflection --> Field : reflects onto
Reflection --> Allowance : reflects
Allowance o-- Belief : group of
Belief --> Frequency : holds unchanging
Thought --> Frequency : is
Thought ..> Belief : reinforces

@enduml
